src/test/deca/context/invalid/added/field_as_method.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A {
  int x = 1;
}

{
  A a = new A();
  a.x();
}
